Git Tests/force-app/main/default/default/objects/Estoque__c/Estoque__c.object-meta.xml
<CustomObject>
    <label>Estoque</label>
    <nameField>
        <label>Número do estoque</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estoques</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>