Git Tests/force-app/main/default/default/objects/Estoque__c/fields/Armazem__c.field-meta.xml
<CustomField>
    <fullName>Armazem__c</fullName>
    <label>Armazém</label>
    <length>80</length>
    <type>Text</type>
</CustomField>