Git Tests/force-app/main/default/default/objects/Estoque__c/fields/ChaveUnica__c.field-meta.xml
<CustomField>
    <fullName>ChaveUnica__c</fullName>
    <description>Chave única formada pela concatenação do id do produto + número do armazém.</description>
    <formula>NomeProduto__r.Id  &amp;  Armazem__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chave única</label>
    <type>Text</type>
</CustomField>