Git Tests/force-app/main/default/default/objects/Estoque__c/fields/DataProcedimento__c.field-meta.xml
<CustomField>
    <fullName>DataProcedimento__c</fullName>
    <label>Data do procedimento</label>
    <type>Date</type>
</CustomField>