Git Tests/force-app/main/default/default/objects/Estoque__c/fields/NomeCliente__c.field-meta.xml
<CustomField>
    <fullName>NomeCliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nome do cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Estoques</relationshipLabel>
    <relationshipName>Estoques</relationshipName>
    <type>Lookup</type>
</CustomField>