Git Tests/force-app/main/default/default/objects/Estoque__c/fields/NomeMedico__c.field-meta.xml
<CustomField>
    <fullName>NomeMedico__c</fullName>
    <label>Nome do médico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>