Git Tests/force-app/main/default/default/objects/Estoque__c/fields/NomePaciente__c.field-meta.xml
<CustomField>
    <fullName>NomePaciente__c</fullName>
    <label>Nome do paciente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>