Git Tests/force-app/main/default/default/objects/Estoque__c/fields/NomeProduto__c.field-meta.xml
<CustomField>
    <fullName>NomeProduto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nome do produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Estoques</relationshipLabel>
    <relationshipName>Estoques</relationshipName>
    <type>Lookup</type>
</CustomField>