Git Tests/force-app/main/default/default/objects/Estoque__c/fields/PrecoMedio__c.field-meta.xml
<CustomField>
    <fullName>PrecoMedio__c</fullName>
    <label>Preço médio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>