Git Tests/force-app/main/default/default/objects/Estoque__c/fields/PrevisaoEntrada__c.field-meta.xml
<CustomField>
    <fullName>PrevisaoEntrada__c</fullName>
    <description>Data que informa uma previsão de quando o produto irá receber no estoque.</description>
    <inlineHelpText>Data que informa uma previsão de quando o produto irá receber no estoque.</inlineHelpText>
    <label>Previsão de entrada</label>
    <type>Date</type>
</CustomField>