Git Tests/force-app/main/default/default/objects/Estoque__c/fields/QuantidadePrevista__c.field-meta.xml
<CustomField>
    <fullName>QuantidadePrevista__c</fullName>
    <description>Informa a quantidade que será abastecida no estoque na data do campo de previsão de entrada.</description>
    <inlineHelpText>Informa a quantidade que será abastecida no estoque na data do campo de previsão de entrada.</inlineHelpText>
    <label>Quantidade prevista</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>