Git Tests/force-app/main/default/default/objects/Estoque__c/fields/Saldo__c.field-meta.xml
<CustomField>
    <fullName>Saldo__c</fullName>
    <label>Saldo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>