Git Tests/force-app/main/default/default/objects/Estoque__c/recordTypes/Estoque.recordType-meta.xml
<RecordType>
    <fullName>Estoque</fullName>
    <active>true</active>
    <description>Identificação do estoque para criação de pedidos e cotações.</description>
    <label>Estoque</label>
</RecordType>