Git Tests/force-app/main/default/default/objects/Estoque__c/recordTypes/EstoqueASerFaturado.recordType-meta.xml
<RecordType>
    <fullName>EstoqueASerFaturado</fullName>
    <active>true</active>
    <description>Estoque já utilizado de um contrato consignado que ainda não tenha sido faturado.</description>
    <label>Estoque a ser faturado</label>
</RecordType>