Git Tests/force-app/main/default/default/objects/Estoque__c/recordTypes/EstoqueEmPoderTerceiro.recordType-meta.xml
<RecordType>
    <fullName>EstoqueEmPoderTerceiro</fullName>
    <active>true</active>
    <description>Estoque de contrato consignado em poder de terceiro.</description>
    <label>Estoque em poder de terceiro</label>
</RecordType>